[package]
name = "minibackup-rs"
version = "0.4.1"
edition = "2021"

[dependencies]
anyhow = "1"
walkdir = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
filetime = "0.2"
hostname = "0.4"
rayon = "1.10"
openssl = "0.10"
zstd-safe = "7"
memmap2 = "0.9"
dashmap = "5"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"
